--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <a href="mailto:gkale.somesh@gmail.com">gkale.somesh@gmail.com</a>
           </div>
           <p class="mb-5">
-            Working on Computer Vision, Machine learning models and Unity3D developement for more than a year. Good understanding of data-structures and Design patterns. Good code analyzing and debugging skills. Able to learn new languages and concepts quickly. 
+            Working on Computer Vision, Machine learning models and Unity3D developement for more than a year. Good understanding of Data-structures and Design patterns. Good code analyzing and debugging skills. Able to learn new languages and concepts quickly. 
 
             </p>
             <div class="github-card" data-github="someshgkale123" data-width="400" data-height="" data-theme="default"></div>
@@ -118,7 +118,7 @@
               <p>Conducted Unity3D workshops for around 100 students: Helping them with the engine setup, understanding of game mechanics, tools information, implementation and usage of those tools while developing a simple fps game</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2017 - June 2018</span>
+              <span class="text-primary">May 2018 - December 2018</span>
             </div>
           </div>
 
