--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               <div class="subheading mb-3">Master of Science</div>
               <div>Computer Science</div>
               <p>GPA: 3.9 / 4</p>
-              <p>Relevant Coursework : Machine Learning, Computer Vision, Database Systems, Algorithm & Data Structures, Intellignet Systems, Knowledge Disc. in Databases, Network Based Application Development, Cloud Computing</p>
+              <p>Relevant Coursework : Machine Learning, Computer Vision, Database Systems, Algorithm & Data Structures, Intelligent Systems, Knowledge Disc. in Databases, Network Based Application Development, Cloud Computing</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary"> Aug 2019 - Present</span>
