--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   Charlotte, NC, United States
               </div>
-              <p> Working on development of iOS mobile and wearable applications that tracks the longitudinal health of Alzheimer disease patients</p>
-              <p> Allowing Caretakers to track the sensor and health-kit data of patients and detect the activities with the help of Machine Learning</p>
+              <p> Developed an iOS mobile and wearable application using Xcode that tracks the longitudinal health of Alzheimer disease patients</p>
+              <p> Performed predictive analysis on the dataset, helping caretakers to detect various activities of the patients with 90% accuracy</p>
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">June 2020 - Present</span>
+              <span class="text-primary">June 2020 - Sept 2020</span>
             </div>
           </div>
 
@@ -141,7 +141,7 @@
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   Charlotte, NC, United States
               </div>
-              <p>Working on Variational Autoencoders for Anomalies Detection</p>
+              <p> Worked on implementation of Variational Auto encoders to detect anomalies in the images. Improved the accuracy of model by 10%</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">May 2020 - Aug 2020</span>
@@ -156,9 +156,9 @@
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   Pune, MH, India
               </div>
-              <p> Developed Driving Simulation mounted with VR connectivity for students to gain driving skills in mixed traffic environments with the real-time view of the car.</p>
-              <p> Applied game mechanics on user’s car, allowing it to drive in various directions. Implemented various way-points in the environment for other cars, to keep looping in those way-points randomly, creating different traffic scenarios.</p>
-              <p> Designed various levels in Simulation for users, to experience driving in different conditions</p>
+              <p> Developed a Car Driving Simulation for students to gain driving skills in mixed traffic environments with the real-time view of the car.</p>
+              <p> Implemented A* path finding algorithm to create different traffic scenarios. Reduced the render time on android devices by 20%.</p>
+              <p> Designed levels in Simulation, to experience driving in different conditions with VR support. Helped 100 students learn driving.</p>
             
               
             </div>
