--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             Working on development of mobile and wearable applications utilizing Machine learning techniques to make everyday lives better. Good understanding of data-structures and Design patterns. Good code analyzing and debugging skills. Able to learn new languages and concepts quickly. 
           </p>
           
-          <a href="https://drive.google.com/file/d/1RmPh8LP6gfrktVzZfeQawcBmfwC2tGjt/view"><img src="img/icons/resume.png" style="max-width: 110px; max-height: 50px"/></a>
+          <a href="https://drive.google.com/file/d/1oyDX0_EsU2ZFtnbFYFh4sKVuP0AOZYv1/view?usp=sharing"><img src="img/icons/resume.png" style="max-width: 110px; max-height: 50px"/></a>
           <br>
 
             <div class="github-card" data-github="someshgkale123" data-width="400" data-height="" data-theme="default"></div>
