--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="subheading mb-5">Seattle · United States · +1 (980)-585-6320 ·
             <a href="mailto:gkale.somesh@gmail.com">gkale.somesh@gmail.com</a>
           </div>
-          <p>Software Developer with more than 2 year experience in developing web and mobile applications. Expertise in solving complex problems with efficient solutions and helped around 100+ people. </p>
+          <p class="mb-5">Software Developer with more than 2 year experience in developing web and mobile applications. Expertise in solving complex problems with efficient solutions and helped around 100+ people. </p>
             <p>Understanding of Data-structures, Algorithms and Design patterns. Good code analyzing and debugging skills.</p>
             <p>various workshops for 200+ students, helping them learn software development technologies while developing desktop and mobile applications.</p> 
             <p>I enjoy being challenged and engaging with projects that require me to work outside my comfort and knowledge set, as continuing to learn new languages and development techniques are important to me.</p>
