--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Software Engineer Intern</h3>
               <div class="subheading mb-3">
-                <a href="https://www.amissa.edu/">Amissa</a>
+                <a href="https://www.amissa.com/">Amissa</a>
                   <br>
                   <i class="fa fa-map-marker" aria-hidden="true"></i>
                   Charlotte, NC, United States
